--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ tagline: if the first try fails! let's call it version 0.1   # it will display a
 description: >-                        
   I've tried my best, it's up to you whether you can appreciate it or not.
   
-url: 'https://itsec.ac.id'
+url: ''
 
 instagram:
    username: enoleriand             
